[gd_scene format=3 uid="uid://copsujei0n8sm"]

[ext_resource type="Script" uid="uid://bvaxux4ki4fl3" path="res://scripts/Tile.gd" id="1_86upo"]
[ext_resource type="PackedScene" uid="uid://bv1phvxccetpq" path="res://cenas/componentes/PosicaoHex.tscn" id="2_kf0ti"]

[node name="Tile" type="Area2D" unique_id=649217449]
script = ExtResource("1_86upo")
cor_tile = Color(0.109786, 0.23789543, 0.34294894, 1)
cor_borda = Color(1, 0, 0, 0.28235295)

[node name="PosicaoHex" parent="." unique_id=66041640 instance=ExtResource("2_kf0ti")]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="." unique_id=1868016482]
polygon = PackedVector2Array(32, 0, 16, 21.615993, -16, 21.615993, -32, 3.0566175e-15, -16, -21.615993, 16, -21.615993)

[node name="PoligonoHexagono" type="Polygon2D" parent="." unique_id=1068093286]
color = Color(0.109786, 0.23789543, 0.34294894, 1)
polygon = PackedVector2Array(32, 0, 16, 21.615993, -16, 21.615993, -32, 3.0566175e-15, -16, -21.615993, 16, -21.615993)

[node name="PoligonoParede" type="Polygon2D" parent="." unique_id=762585642]

[node name="LinhaHexagono" type="Line2D" parent="." unique_id=1107292502]
points = PackedVector2Array(32, 0, 16, 21.615993, -16, 21.615993, -32, 3.0566175e-15, -16, -21.615993, 16, -21.615993, 32, 0)
width = 1.0
default_color = Color(1, 1, 1, 0.4627451)

[node name="LinhaParede" type="Line2D" parent="." unique_id=1974647129]
